public js files

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -13,4 +13,6 @@
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
+<script src="/javascript/likes.js"></script>
+<script src="/javascript/add-post.js"></script>
 {{/if}}
