--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.ico" />
   <title>Common Unity</title>
   <!--<link rel="stylesheet" href="/stylesheets/style.css">-->
 </head>
@@ -12,7 +14,7 @@
   <div class="wrapper">
     <header>
       <h1>
-        <a href="/">Common Unity</a>
+        <a href="/">Comm[on]unity</a>
       </h1>
       <nav>
         {{#if loggedIn}}
