--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,4 +4,8 @@
         {{> post-info post}}
     </li>
     {{/each}}
+    <div>
+        <label for="email-login">test:</label>
+        <input type="text" id="email-login" />
+    </div>
 </ol>
