--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
   <!-- favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.ico" />
   <title>Common Unity</title>
-  <link rel="stylesheet" href="/public/stylesheets/style.css"/>
+  <link rel="stylesheet" href="/stylesheets/style.css"/>
 </head>
 
 <body>
