--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
     </div>
 
     <div>
-        <button type="submit">login</button>
+        <button type="submit">login:</button>
     </div>
 </form>
 
@@ -22,7 +22,7 @@
     </div>
 
     <div>
-        <label for="street-address">street address::</label>
+        <label for="street-address">street address:</label>
         <input type="text" id="street-address" />
     </div>
 
