--- a/views/yourpage.handlebars
+++ b/views/yourpage.handlebars
@@ -6,6 +6,11 @@
             <label for="post-title">Title</label>
             <input type="text" id="post-title" name="post-title" />
         </div>
+        <div>
+            <label for = 'post-text'>Post</label>
+            <input id = 'post-text' name = 'post-text' />
+        </div>
+        <button type = 'submit' class = 'btn'>Create</button>
     </form>
 </section>
 
