--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/public/stylesheets/assets/images/favicon.ico" />
   <title>Common Unity</title>
   <link rel="stylesheet" href="/stylesheets/style.css"/>
 </head>
@@ -21,7 +21,9 @@
         <a href="/yourpage">yourpage</a>
         <button id="logout" class="btn-no-style">logout</button>
         {{else}}
+        
         <a href="/login">login</a>
+        
         {{/if}}
       </nav>
     </header>
