--- a/views/yourpage.handlebars
+++ b/views/yourpage.handlebars
@@ -1,3 +1,5 @@
+
+
 <section>
     <h2>Create New Post</h2>
 
@@ -6,11 +8,16 @@
             <label for="post-title">Title</label>
             <input type="text" id="post-title" name="post-title" />
         </div>
+        <div>
+            <label for = 'post-text'>Post</label>
+            <input id = 'post-text' name = 'post-text' />
+        </div>
+        <button type = 'submit' class = 'btn'>Create</button>
     </form>
 </section>
 
-{{#if posts.length}}
-<seciton>
+ {{#if loggedIn}}  
+<section>
     <h2>Your Posts</h2>
     <ol>
         {{#each posts as |post|}}
@@ -20,7 +27,6 @@
         </li>
         {{/each}}
     </ol>
-</seciton>
-{{/if}}
+</section> 
+{{/if}} 
 
-<script src="/javascript/add-post.js"></script>
