--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -4,12 +4,18 @@
     <div class="meta">
       {{user.username}} on {{format_date created_at}}
     </div>
-    <div class="text">
-      {{comment_text}}
+    <div>
+      <textarea name="comment-body"></textarea>
+    </div>
+    <div>
+      <button type="submit">add comment</button>
+      <button type="button" class="like-btn">like</button>
     </div>
   </section>
   {{/each}}
 </div>
+
+{{comments post.comments}}
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
