comment page renders kind of

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -5,7 +5,8 @@
       {{user.username}} on {{format_date created_at}}
     </div>
     <div>
-      <textarea name="comment-body"></textarea>
+      <label for="comment-text">Comment</label>
+      <input id="comment-text" name="comment-text" />
     </div>
     <div>
       <button type="submit">add comment</button>
