--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -4,13 +4,13 @@
     <!--<span>{{format_url post.post_text}}</span>-->
   </div>
   <div class="content">
-    <a href="/post-info{{post.post_text}}">{{post_text}}</a>
+    <a href="/post-info/{{post.post_text}}">{{post_text}}</a>
   </div>
   <div class="meta">
     {{like_count}} {{format_plural "point" post.like_count}} by {{user.username}} on
     {{format_date post.created_at}}
     |
-    <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
+    <a href="/api/comments/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
   </div>
 
 </article>
