--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,6 +9,11 @@
     </li>
     
     {{/each}}
+
+{{!-- the idea here is to print the calendar and have it populated with any dates that the user selected for events?
+in terms of styleing, this would be better on the left right of the comments section --}}
+{{!-- how to collect this input? should i do an input field with button. Or have a calendar event post be part of the post object? --}}
+    {{> calendar}}
     
 </ol>
 
