--- a/views/yourpage.handlebars
+++ b/views/yourpage.handlebars
@@ -1,5 +1,3 @@
-
-
 <section>
     <h2>Create New Post</h2>
 
@@ -15,7 +13,7 @@
         <button type = 'submit' class = 'btn'>Create</button>
     </form>
 </section>
-
+{{!-- somethings wrong with this-the above field is rendered, but the below handlebars is not --}}
  {{#if loggedIn}}  
 <section>
     <h2>Your Posts</h2>
