--- a/views/partials/homepage.handlebars
+++ b/views/partials/homepage.handlebars
@@ -5,3 +5,9 @@
     </li>
     {{/each}}
 </ol>
+
+<div id="weather-container"></div>
+
+{{#if loggedIn}}
+<script src="/javascript/weather.js"></script>
+{{/if}}
