--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -2,24 +2,27 @@
   {{#each this}}
   <section class="comment">
     <div class="meta">
-      {{user.username}} on {{format_date created_at}}
+      {{member.username}} on {{format_date created_at}}
     </div>
-    <div>
+    {{!-- <div>
       <label for="comment-text">Comment</label>
       <input id="comment-text" name="comment-text" />
-    </div>
-    <div>
+    </div> --}}
+    {{!-- <div>
       <button type="submit">add comment</button>
       <button type="button" class="like-btn">like</button>
+    </div> --}}
+    <div class = 'text'>
+      {{comment_text}}
     </div>
   </section>
   {{/each}}
 </div>
 
-{{comments post.comments}}
+{{!-- {{comments post.comments}}
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/likes.js"></script>
 <script src="/javascript/add-post.js"></script>
-{{/if}}
+{{/if}} --}}
