--- a/views/yourpage.handlebars
+++ b/views/yourpage.handlebars
@@ -1,31 +1,31 @@
+
+
 <section>
     <h2>Create New Post</h2>
-
-    <form class="new-post-form">
+    <form class = 'new-post-form'>
         <div>
-            <label for="post-title">Title</label>
-            <input type="text" id="post-title" name="post-title" />
+            <label for = 'post-title'>Title</label>
+            <input type = 'text' id = 'post-title' name = 'post-title' />
         </div>
         <div>
             <label for = 'post-text'>Post</label>
-            <input id = 'post-text' name = 'post-text' />
+            <input type = 'text' id = 'post-text' name = 'post-text'/>
         </div>
         <button type = 'submit' class = 'btn'>Create</button>
     </form>
-</section>
-{{!-- somethings wrong with this-the above field is rendered, but the below handlebars is not --}}
- {{#if loggedIn}}  
-<section>
-    <h2>Your Posts</h2>
-    <ol>
+    <ol class = 'post-list'>
+        <section>
+            <h2>Your Posts</h2>
+        </section>
+       
         {{#each posts as |post|}}
         <li>
             {{> post-info post}}
-            <a href="/yourpage/edit/{{post.id}}" class="edit-post">Edit post</a>
+            <a href = '/yourpage/edit/{{post.id}}' class = "edit-post">Edit Post</a>
         </li>
         {{/each}}
+        
     </ol>
-</section> 
-{{/if}} 
+</section>
 
-<script src="/javascript/add-post.js"></script>
+<script src = '/javascript/add-post.js'></script>
