fixed bug in yourpage will now only display members posts

--- a/views/yourpage.handlebars
+++ b/views/yourpage.handlebars
@@ -17,14 +17,14 @@
         <section>
             <h2>Your Posts</h2>
         </section>
-       
+       {{#if posts.length}}
         {{#each posts as |post|}}
         <li>
             {{> post-info post}}
             <a href = '/yourpage/edit/{{post.id}}' class = "edit-post">Edit Post</a>
         </li>
         {{/each}}
-        
+        {{/if}}
     </ol>
 </section>
 
