comment form prints

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -16,7 +16,7 @@
 </article> --}}
 {{!-- bug-the code above is printing but this code below. For some reason, only the content of the 
 article is being rendered. Nothing in the form in the comment space below is rendering --}}
-{{!-- <article class="post"> --}}
+<article class="post">
   {{> post-info post }}
   {{#if loggedIn }}
   <form class="comment-form">
@@ -29,13 +29,23 @@ article is being rendered. Nothing in the form in the comment space below is ren
       <button type="button" class="like-btn">like</button>
     </div>
   </form>
+
+  <ol class = 'comment-list'>
+    <section>
+      <h3>Comments</h3>
+    </section>
+
+    {{#each posts as |post|}}
+    <li>
+      {{comment-body}}
+    </li>
+    {{/each}}
+  </ol>
 </article>
+{{!-- {{comment_text}} --}}
 {{/if}}
-{{comments post.comments}}
 
 {{#if loggedIn}}
-
-
 <script src="/javascript/add-post.js"></script>
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/like.js"></script>
