--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -25,4 +25,5 @@
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/likes.js"></script>
 <script src="/javascript/add-post.js"></script>
+<script src="/utils/helpers.js"></script>
 {{/if}} --}}
