--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -19,10 +19,9 @@
   {{/each}}
 </div>
 
-{{!-- {{comments post.comments}}
+{{comments post.comments}}
 
-{{#if loggedIn}}
+
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/likes.js"></script>
 <script src="/javascript/add-post.js"></script>
-{{/if}} --}}
