edit post page now displaying

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,8 @@
 <article class = 'post'>
     <div class = 'title'>
         <span>{{title}}</span>
-        <span>({{post_message}})</span>
+        <br>
+        <span>{{post_message}}</span>
     </div>
     <div class = 'meta'>
         {{like_count}} {{format_plural "point" like_count}} by {{member.username}} on
