broken page load

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -7,8 +7,8 @@
     {{!-- <div>
       <label for="comment-text">Comment</label>
       <input id="comment-text" name="comment-text" />
-    </div> --}}
-    {{!-- <div>
+    </div>
+    <div>
       <button type="submit">add comment</button>
       <button type="button" class="like-btn">like</button>
     </div> --}}
@@ -21,9 +21,9 @@
 
 {{comments post.comments}}
 
-
+{{!-- {{#if loggedIn}} --}}
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/likes.js"></script>
-<script src="/javascript/add-post.js"></script>
+{{!-- <script src="/javascript/add-post.js"></script> --}}
 <script src="/utils/helpers.js"></script>
-{{/if}}
+{{!-- {{/if}} --}}
