--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -24,5 +24,5 @@
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/likes.js"></script>
-<script src="/javascript/add-post.js"></script>
+{{!-- <script src="/javascript/add-post.js"></script> --}}
 {{/if}}
