comment page prints

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -8,7 +8,7 @@
         {{like_count}} {{format_plural "point" like_count}} by {{member.username}} on
         {{format_date created_at}}
         |
-        {{!-- somethings wrong with this-it doesn't redirect to the comments handlebars --}}
+        {{!-- DO NOT ADD 'post' IN FRONT OF 'id' --}}
         <a href = '/post/{{id}}'>{{comments.length}} {{format_plural "comment" comments.length}}</a>
     </div>
 </article>
