--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -42,7 +42,7 @@ article is being rendered. Nothing in the form in the comment space below is ren
     {{/each}}
   </ol>
 </article>
-{{!-- {{comment_text}} --}}
+{{comment_text}}
 {{/if}}
 
 {{#if loggedIn}}
