--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -7,19 +7,19 @@
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
       <br>
-      <textarea name="post-message" type="text" value="{{ post.post_message}}"></textarea>
+      <input name="post-message" type="text" value="{{post.post_message}}" />
     </div>
-    <div>
+    {{!-- <div>
       {{like_count}} {{format_plural "point" post.like_count}} by you on {{format_date post.created_at}}
       |
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
-    </div>
+    </div> --}}
     <button type="submit">Save post</button>
     <button type="button" class="delete-post-btn">Delete post</button>
   </form>
 </article>
 
-<form class="comment-form">
+{{!-- <form class="comment-form">
   <div>
     <textarea name="comment-body"></textarea>
   </div>
@@ -29,8 +29,8 @@
   </div>
 </form>
 
-{{> comments post.comments}}
+{{> comments post.comments}} --}}
 
 <script src="/javascript/edit-post.js"></script>
 <script src="/javascript/delete-post.js"></script>
-<script src="/javascript/comment.js"></script>
+{{!-- <script src="/javascript/comment.js"></script> --}}
