edit field shows text

--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -7,7 +7,7 @@
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
       <br>
-      <textarea name="post-message" type="text" value="{{ post.post_message}}"></textarea>
+      <textarea name="post-message" type="text" value="{{post.post_message}}">{{post.post_message}}</textarea>
     </div>
     <div>
       {{like_count}} {{format_plural "point" post.like_count}} by you on {{format_date post.created_at}}
