--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -26,7 +26,7 @@ article is being rendered. Nothing in the form in the comment space below is ren
 
     <div>
       <button type="submit">add comment</button>
-      <button type="button" class="like-btn">like</button>
+      {{!-- <button type="button" class="like-btn" id="like-btn">like</button> --}}
     </div>
   </form>
 
@@ -41,7 +41,7 @@ article is being rendered. Nothing in the form in the comment space below is ren
 {{/if}}
 
 {{#if loggedIn}}
-<script src="/javascript/add-post.js"></script>
+{{!-- <script src="/javascript/add-post.js"></script> --}}
 <script src="/javascript/comment.js"></script>
-<script src="/javascript/like.js"></script>
+{{!-- <script src="/javascript/likes.js"></script> --}}
 {{/if}}
