--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -15,14 +15,8 @@
 
 <div>
       <button type="submit">add comment</button>
-      <button type="button" class="like-btn">like</button>
+      {{!-- <button type="button" class="like-btn">like</button> --}}
 </div>
 
 {{> comments post.comments}}
 
-
-{{#if loggedIn}}
-<script src="/javascript/comment.js"></script>
-<script src="/javascript/likes.js"></script>
-<script src="/javascript/add-post.js"></script>
-{{/if}}
