--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -5,7 +5,7 @@
         <span>{{post_message}}</span>
     </div>
     <div class = 'meta'>
-        {{like_count}} {{format_plural "point" like_count}} by {{member.username}} on
+        {{like_count}} {{format_plural "post" like_count}} by {{member.username}} on
         {{format_date created_at}}
         |
         {{!-- DO NOT ADD 'post' IN FRONT OF 'id' --}}
