--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -43,5 +43,5 @@ article is being rendered. Nothing in the form in the comment space below is ren
 {{#if loggedIn}}
 {{!-- <script src="/javascript/add-post.js"></script> --}}
 <script src="/javascript/comment.js"></script>
-{{!-- <script src="/javascript/like.js"></script> --}}
+{{!-- <script src="/javascript/likes.js"></script> --}}
 {{/if}}
